*Version 3.6.2*
* Add public getter method for points list in DataSourceWrapper from DataSourceQuery

*Version 3.6.1*
* Fix small javascript bug on legacy system settings page where data source permissions were being set 2x
* Restore System Event default alarm levels to be the same as in Mango 3.5
* Remove ability to export data points as CSV from legacy UI, this is supported with features in the new UI that are more flexible
* Fix bug generating password reset url
* Add events for Publisher DAO to support websocket messages for all publishers when created, updated or deleted
* Fix for Rate of change detector in average mode to compute rate of change every time the point's value changes
* Add RQL support for publishers via REST

*Version 3.6.0*
* Add missing convenience methods for getStats in Numeric and Alphanumeric script context points, third argument cache defaults false
* Fixing debug logging in serial server input stream
* Fix quantize data source poll and interval logging delays to avoid a currentTimeMillis() call
* Add IP whitelist for virtual serial server sockets
* Add debug log of incoming IPs on virtual serial server sockets
* Improve handling of exception in data point listeners on initialize or terminate when only 1 listener is present
* Modify email FTL Model for events, references to evt.alarmLevel in overridden templates should be changed to evt.alarmLevel.value()
* Expose connection description and data source type translations in Data Source REST models
* Add SMTP mail server connection/read/write timeout system setting
* Fixing bug in process log that would not allow Error level logging for Mango Java Script
* Changing Java Script Script Permissions from multiple permissions groups into a single group.  Note the REST models will reflect this.
* Fix bug in legacy UI data source edit page that would not track a new data source's ID after initial save, this would effect some data source tools