@@ -1,3 +1,6 @@
+/**
+ * Copyright (C) 2018 Infinite Automation Software. All rights reserved.
+ */
 package com.infiniteautomation.mango.quantize;
 
 import java.time.Instant;
@@ -7,16 +10,20 @@ import com.serotonin.m2m2.view.stats.IValueTime;
 
 public class StartsAndRuntimeListQuantizer extends AbstractPointValueTimeQuantizer<StartsAndRuntimeList> {
 
+    private StartsAndRuntimeList stats;
+    
     public StartsAndRuntimeListQuantizer(BucketCalculator bucketCalculator, StatisticsGeneratorQuantizerCallback<StartsAndRuntimeList> callback) {
         super(bucketCalculator, callback);
     }
-    
-    /* (non-Javadoc)
-     * @see com.serotonin.m2m2.view.quantize3.AbstractDataQuantizer#createStatistics(java.time.Instant, java.time.Instant, com.serotonin.m2m2.rt.dataImage.types.DataValue)
-     */
+
     @Override
     protected StartsAndRuntimeList createStatistics(Instant start, Instant end,
             IValueTime startValue) {
-        return new StartsAndRuntimeList(start.toEpochMilli(), end.toEpochMilli(), startValue);
+        if(stats == null) {
+            stats = new StartsAndRuntimeList(start.toEpochMilli(), end.toEpochMilli(), startValue);
+        }else {
+            stats.reset(start.toEpochMilli(), end.toEpochMilli(), startValue);
+        }
+        return stats;
     }
 }
