@@ -1,5 +1,6 @@
 *Version 3.6.2*
 * Add public getter method for points list in DataSourceWrapper from DataSourceQuery
+* Improve memory use for quantized statistics, point value rollups for example use this
 
 *Version 3.6.1*
 * Fix small javascript bug on legacy system settings page where data source permissions were being set 2x
